--- a/Assets/Style.css
+++ b/Assets/Style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400");
 
 body{
   margin: 0px;
   padding: 0px;
   font-size: 1em;
-  font-family: "Montserrat", "Open Sans", sans-serif;
+  font-family: "Source Sans Pro", "Open Sans", sans-serif;
   background-color: #FAFAFA;
 }
 div{
@@ -76,10 +76,23 @@ a{
       -ms-flex-pack: center;
           justify-content: center;
 }
+.pickr{
+  display: inline;
+  z-index: 0;
+  margin: 1%;
+  padding: 1%;
+}
+.pickr .pcr-button{
+  width: 15vw;
+  height: 15vh;
+  -webkit-box-shadow: 0px 0px 16px #616161;
+     -moz-box-shadow: 0px 0px 16px #616161;
+          box-shadow: 0px 0px 16px #616161;
+}
 #direction-frame{
   text-align: center;
   background-color: #E0E0E0;
-  margin: 0% 8% 0% 8%;
+  margin: 1%;
   padding: 1%;
 }
 #direction{
@@ -122,6 +135,10 @@ footer{
     width: auto;
     height: auto;
     margin-left: 0px;
+  }
+  .pickr .pcr-button{
+    width: 30vw;
+    height: 15vh;
   }
   #get-code-btn{
     position: absolute;
